Updated main.server.ts to fix localization issues Updated home buttons for maps Fixed issue where the carousel frame would get cutoff Updated login to use the name from sheets instead of user input

--- a/src/app/_components/carousel/carousel.scss
+++ b/src/app/_components/carousel/carousel.scss
@@ -1,5 +1,6 @@
 .component-container {
   height: 420px;
+  min-height: 350px;
   max-height: 700px;
   max-width: 500px;
   margin: 0 auto;
