--- a/src/app/_pages/invitation-menu/invitation-menu.scss
+++ b/src/app/_pages/invitation-menu/invitation-menu.scss
@@ -123,7 +123,7 @@
 
   .btn-container {
     position: absolute;
-    bottom: 15vh;
+    bottom: 5vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -242,7 +242,7 @@
   width: 100%;
   display: flex;
   visibility: visible;
-  max-height: 45vh;
+  max-height: 60vh;
   opacity: 1;
 }
 
